works and blog page added

--- a/works.html
+++ b/works.html
@@ -5,9 +5,99 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Portfolio</title>
+    <title>Works</title>
 </head>
 <body> 
-    
+    <header class="works-section">
+        <nav class="hamburger-menu">
+            <input class="menu-btn" type="checkbox" id="menu-btn" />
+            <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+            <ul class="menu">
+              <li><a href="./works.html">Works</a></li>
+              <li><a href="./blog.html">Blog</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <nav class="menu">
+            <ul>
+                <li><a href="./works.html">Works</a></li>
+                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="works-container">
+        <article>
+            <a href="works-detail.html">
+                <img src="img/Rectangle 30.png" alt="">
+                <div class="content">
+                    <h2>Designing Dashboards</h2>
+                    <span class="date">2020</span>
+                    <span class="keyword">Dashboard</span>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                </div>
+            </a>
+        </article>
+        <hr>
+        <article>
+            <img src="img/Rectangle 31.png" alt="">
+            <div class="content">
+                <h2>Designing Landing pages</h2>
+                <span class="date">2020</span>
+                <span class="keyword">Website</span>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div>
+        </article>
+        <hr>
+        <article>
+            <img src="img/Rectangle 32.png" alt="">
+            <div class="content">
+                <h2>Vibrant Portraits of 2020</h2>
+                <span class="date">2018</span>
+                <span class="keyword">Illustration</span>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div>
+        </article>
+        <hr>
+        <article>
+            <img src="img/Rectangle 34.png" alt="">
+            <div class="content">
+                <h2>36 Days of Malayalam type</h2>
+                <span class="date">2018</span>
+                <span class="keyword">Typography</span>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div>
+        </article>
+        <hr>
+        <article>
+            <img src="img/Rectangle 40.png" alt="">
+            <div class="content">
+                <h2>Components</h2>
+                <span class="date">2018</span>
+                <span class="keyword">Components, Design</span>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div>
+        </article>
+        <hr>
+    </div>
+
+    <footer>
+        <div class="social-links">
+            <a href="#">
+                <img src="img/fb.svg" alt="facebook">
+            </a>
+            <a href="#">
+                <img src="img/insta.svg" alt="instagram">
+            </a>
+            <a href="#">
+                <img src="img/twitter.svg" alt="twitter">
+            </a>
+            <a href="#">
+                <img src="img/Linkedin.svg" alt="linkedin">
+            </a>
+        </div>
+        <p>Copyright ©2020 All rights reserved </p>
+    </footer>
 </body>
 </html>
