--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,77 @@
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <header class="blog-section">
+        <nav class="hamburger-menu">
+            <input class="menu-btn" type="checkbox" id="menu-btn" />
+            <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+            <ul class="menu">
+              <li><a href="./works.html">Works</a></li>
+              <li><a href="./blog.html">Blog</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <nav class="menu">
+            <ul>
+                <li><a href="./works.html">Works</a></li>
+                <li><a href="./blog.html">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="blog-container">
+        <h1>Blog</h1>
+        <article>
+            <h2>UI Interactions of the week</h2> 
+            <span class="date">12 Feb 2019</span>
+            <span class="devider"> ∣</span> 
+            <span class="keyword">Express, Handlebars</span>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        </article>
+        <hr>
+        <article>
+            <h2>UI Interactions of the week</h2> 
+            <span class="date">12 Feb 2019</span>
+            <span class="devider"> ∣</span> 
+            <span class="keyword">Express, Handlebars</span>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        </article>
+        <hr>
+        <article>
+            <h2>UI Interactions of the week</h2> 
+            <span class="date">12 Feb 2019</span>
+            <span class="devider"> ∣</span> 
+            <span class="keyword">Express, Handlebars</span>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        </article>
+        <hr>
+        <article>
+            <h2>UI Interactions of the week</h2> 
+            <span class="date">12 Feb 2019</span>
+            <span class="devider"> ∣</span> 
+            <span class="keyword">Express, Handlebars</span>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        </article>
+        <hr>
+    </div>
+
+    <footer>
+        <div class="social-links">
+            <a href="#">
+                <img src="img/fb.svg" alt="facebook">
+            </a>
+            <a href="#">
+                <img src="img/insta.svg" alt="instagram">
+            </a>
+            <a href="#">
+                <img src="img/twitter.svg" alt="twitter">
+            </a>
+            <a href="#">
+                <img src="img/Linkedin.svg" alt="linkedin">
+            </a>
+        </div>
+        <p>Copyright ©2020 All rights reserved </p>
+    </footer>
 </body>
 </html>
