--- a/homepage.html
+++ b/homepage.html
@@ -8,20 +8,20 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <header>
+    <header class="works-section">
         <nav class="hamburger-menu">
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
             <ul class="menu">
-              <li><a href="#">Works</a></li>
+              <li><a href="./works.html">Works</a></li>
               <li><a href="./blog.html">Blog</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
         </nav>
         <nav class="menu">
             <ul>
-                <li><a href="#">Works</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="./works.html">Works</a></li>
+                <li><a href="./blog.html">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
